@@ -61,6 +61,7 @@
                sourcepath="">
 
             <include name="**/*.java"/>
+            <exclude name="**/CharSequenceReader.java"/>
             <exclude name="**/RegexFileFilter.java"/>
 
         </javac>
